--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:dev": "webpack serve --open --mode development",
     "start:prod": "webpack serve --open --mode production",
     "build:dev": "webpack  --mode development",
-    "build:production": "webpack --mode production",
+    "build:prod": "webpack --mode production",
     "generate:css": "tcm src -e -w"
   },
   "private": "true",
